# rust-bindocs

./: Cargo.toml  LICENSE  README.md  README.template.md
.github/workflows/: build.yml
src/: main.rs  module_path.rs  replacer.rs  resolver.rs  utils.rs
src/parser/: doc_comments.rs  mod.rs  rename_rule.rs
src/renderer/: markdown.rs  mod.rs
