[package]
name = "bindocs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A tool to assist writing documentation for Rust binaries"
keywords = ["documentation", "generator", "markdown", "binary", "cli"]

[dependencies]
proc-macro2 = "1.0.66"
syn = { version = "2.0.27", features = ["full", "extra-traits"] }
clap = { version = "4.3.19", features = ["derive"] }
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
walkdir = "2.3.3"
pathdiff = "0.2.1"
serde = { version = "1.0.177", features = ["derive"] }
libcorn = "0.8.0"